--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <p>Você é incrível como as artes de Van Gogh.</p>
     <p>Assim como a noite estrelada, você possui estrelas em seu olhar.</p>
     <p>Você é admirável.</p>
-    <p>Poder estar contigo melhora todos os momentos.</p>
+    <p>A sua presença melhora o dia de uma forma absoluta como o sol melhora a lua ao entardecer ou amanhacer, vc brila!.</p>
   </main>
 
   <div class="heart">
